--- a/pruebaPlatzi.html
+++ b/pruebaPlatzi.html
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hablalo mano</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Buenas tardes señores</h1>
+  </body>
 </html>
