--- a/pruebaPlatzi.html
+++ b/pruebaPlatzi.html
@@ -8,5 +8,11 @@
   </head>
   <body>
     <h1>Buenas tardes señores</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero labore
+      itaque sequi qui consequatur? Atque voluptate aperiam dicta excepturi
+      nulla? Atque minus, vitae laborum velit error cupiditate totam laudantium
+      fugiat.
+    </p>
   </body>
 </html>
