ultimos cambios antes cambio rama

--- a/pruebaPlatzi.html
+++ b/pruebaPlatzi.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hablalo mano</title>
+    <link rel="stylesheet" href="./css2/estilos.css" />
   </head>
   <body>
-    <h1>Buenas tardes señores</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero labore
-      itaque sequi qui consequatur? Atque voluptate aperiam dicta excepturi
-      nulla? Atque minus, vitae laborum velit error cupiditate totam laudantium
-      fugiat.
-    </p>
+    <div class="container">
+      <h1>Buenas tardes señores</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero labore
+        itaque sequi qui consequatur? Atque voluptate aperiam dicta excepturi
+        nulla? Atque minus, vitae laborum velit error cupiditate totam
+        laudantium fugiat.
+      </p>
+    </div>
   </body>
 </html>
