primeros cambios en rama navbar

--- a/pruebaPlatzi.html
+++ b/pruebaPlatzi.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./css2/estilos.css" />
   </head>
   <body>
+    <nav>
+      <li><a href="#">uno</a></li>
+      <li><a href="#">dos</a></li>
+      <li><a href="#">tres</a></li>
+      <li><a href="#">cuatro</a></li>
+    </nav>
     <div class="container">
       <h1>Buenas tardes señores</h1>
       <p>
