--- a/pruebaPlatzi.html
+++ b/pruebaPlatzi.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <li><a href="#">uno</a></li>
+      <li><a href="#">trece</a></li>
       <li><a href="#">dos</a></li>
       <li><a href="#">tres</a></li>
       <li><a href="#">cuatro</a></li>
