intentando segundo merge

--- a/pruebaPlatzi.html
+++ b/pruebaPlatzi.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
       <li><a href="#">trece</a></li>
-      <li><a href="#">dos</a></li>
+      <li><a href="#">catorce</a></li>
       <li><a href="#">tres</a></li>
       <li><a href="#">cuatro</a></li>
     </nav>
