--- a/pruebaPlatzi.html
+++ b/pruebaPlatzi.html
@@ -11,7 +11,7 @@
     <nav>
       <li><a href="#">trece</a></li>
       <li><a href="#">catorce</a></li>
-      <li><a href="#">tres</a></li>
+      <li><a href="#">15</a></li>
       <li><a href="#">cuatro</a></li>
     </nav>
     <div class="container">
