--- a/pruebaPlatzi.html
+++ b/pruebaPlatzi.html
@@ -15,7 +15,7 @@
       <li><a href="#">15</a></li>
     </nav>
     <div class="container">
-      <h1>Buenas tardes señores</h1>
+      <h1>Buenas tardes señoras</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero labore
         itaque sequi qui consequatur? Atque voluptate aperiam dicta excepturi
