--- a/pruebaPlatzi.html
+++ b/pruebaPlatzi.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css2/estilos.css" />
   </head>
   <body>
-    <nav>
+    <!-- <nav>
       <li><a href="#">trece</a></li>
       <li><a href="#">catorce</a></li>
       <li><a href="#">tres</a></li>
@@ -23,6 +23,10 @@
         laudantium fugiat.
       </p>
       <p>Hecho por Bryan</p>
-    </div>
+    </div> -->
+    <main>
+      <h1>soy un titulo</h1>
+      <p>soy un parrafo</p>
+    </main>
   </body>
 </html>
