--- a/pruebaPlatzi.html
+++ b/pruebaPlatzi.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="./css2/estilos.css" />
   </head>
   <body>
-    <!-- <nav>
+    <nav>
       <li><a href="#">trece</a></li>
       <li><a href="#">catorce</a></li>
       <li><a href="#">tres</a></li>
       <li><a href="#">15</a></li>
     </nav>
     <div class="container">
-      <h1>Buenas tardes niños</h1>
+      <h1>Probando SSH</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero labore
         itaque sequi qui consequatur? Atque voluptate aperiam dicta excepturi
@@ -23,7 +23,7 @@
         laudantium fugiat.
       </p>
       <p>Hecho por Bryan</p>
-    </div> -->
+    </div>
     <main>
       <h1>soy un titulo</h1>
       <p>soy un parrafo</p>
